name:                hackage-mirror-tool
version:             0.0.0.0
synopsis:            Alternative Hackage mirroring tool
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable hackage-mirror-tool
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables

  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Common
                       IndexClient
                       IndexShaSum
                       Sha256Md5Map
                       SimpleS3

  build-depends: aeson                  >=0.11.2   && <0.12
               , async                  >=2.1      && <2.2
               , base                   >=4.8      && <4.10
               , base16-bytestring      >=0.1      && <0.2
               , base64-bytestring      >=1.0      && <1.1
               , blaze-builder          >=0.4.0    && <0.5
               , bytestring             >=0.10     && <0.11
               , containers             >=0.5.6    && <0.6
               , cryptohash-md5         >=0.11.7.2 && <0.12
               , cryptohash-sha1        >=0.11.100 && <0.12
               , cryptohash-sha256      >=0.11.7.2 && <0.12
               , deepseq                >=1.4      && <1.5
               , directory              >=1.2.2    && <1.3
               , filepath               >=1.4.0    && <1.5
               , hackage-security       >=0.5.1    && <0.6
               , hackage-security-HTTP  >=0.1.1    && <0.2
               , hashable               >=1.2.4    && <1.3
               , http-streams           >=0.8      && <0.9
               , io-streams             >=1.3      && <1.4
               , network-uri            >= 2.6.1   && <2.7
               , optparse-applicative   >=0.12.1   && <0.13
               , tar                    >=0.5      && <0.6
               , text                   >=1.2.2    && <1.3
               , time                   >=1.5      && <1.7
               , unordered-containers   >=0.2.7    && <0.3
               , xml                    >=1.3      && <1.4
               , zlib                   >=0.6.1    && <0.7

  ghc-options:         -threaded -Wall -rtsopts
