name:                hackage-mirror-tool
version:             0.0.0.0
synopsis:            Alternative Hackage mirroring tool
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.25

executable hackage-mirror-tool
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables

  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Common
                       IndexClient
                       IndexShaSum
                       SimpleS3

  build-depends: aeson                  ^>= 0.11.2
               , async                  ^>= 2.1
               , base                   ^>= 4.9
               , base16-bytestring      ^>= 0.1
               , base64-bytestring      ^>= 1.0
               , blaze-builder          ^>= 0.4.0
               , bytestring             ^>= 0.10
               , containers             ^>= 0.5.6
               , cryptohash-md5         ^>= 0.11.7.2
               , cryptohash-sha1        ^>= 0.11.100
               , cryptohash-sha256      ^>= 0.11.7.2
               , deepseq                ^>= 1.4
               , directory              ^>= 1.2.2
               , filepath               ^>= 1.4.0
               , hackage-security       ^>= 0.5.2
               , hackage-security-HTTP  ^>= 0.1.1
               , hashable               ^>= 1.2.4
               , http-streams           ^>= 0.8
               , io-streams             ^>= 1.3
               , network-uri            ^>= 2.6.1
               , optparse-applicative   ^>= 0.13.0.0
               , tar                    ^>= 0.5
               , text                   ^>= 1.2.2
               , time                   ^>= 1.6
               , unordered-containers   ^>= 0.2.7
               , xml                    ^>= 1.3
               , zlib                   ^>= 0.6.1

  ghc-options:         -threaded -Wall -rtsopts
