cabal-version:       2.2
name:                hackage-mirror-tool
version:             0.0.0.0

license:             GPL-3.0-only
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
bug-reports:         https://github.com/hvr/hackage-mirror-tool/issues
category:            Network
extra-source-files:  ChangeLog.md
tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.2

synopsis:            Alternative Hackage mirroring tool
description:
  This is a simple tool for mirroring to S3-compatible object stores (such as Dreamhost or AWS).
  .
  See also @hackage-mirror-tool --help@.
  .
  === Resource requirements

  Currently, using this tool to operate a [Hackage](http://hackage.haskell.org) mirror has the following requirements:
  .
   - ~1 GiB local filesystem storage (used for by local 01-index.tar cache)
   - ~10 GiB of storage in S3 bucket (at time of writing ~7.1 GiB were needed, this size increases monotonoically over time)
   - A single-threaded @hackage-mirror-tool@ run needs (less than) ~256 MiB RAM; IOW, a small 512 MiB RAM VM configuration suffices
  .

source-repository head
  type: git
  location: https://github.com/hvr/hackage-mirror-tool

executable hackage-mirror-tool
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables

  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Common
                       IndexClient
                       IndexShaSum
                       SimpleS3

  build-depends:
    , aeson                  ^>= 0.11.2
    , async                  ^>= 2.2.1
    , base                   ^>= 4.9.0.0
                          || ^>= 4.10.0.0
                          || ^>= 4.11.0.0
    , base16-bytestring      ^>= 0.1
    , base64-bytestring      ^>= 1.0
    , bytestring             ^>= 0.10.8
    , containers             ^>= 0.5.6
    , cryptohash-md5         ^>= 0.11.7.2
    , cryptohash-sha1        ^>= 0.11.100
    , cryptohash-sha256      ^>= 0.11.7.2
    , deepseq                ^>= 1.4
    , directory              ^>= 1.2.2
                          || ^>= 1.3.0.0
    , filepath               ^>= 1.4.0
    , hackage-security       ^>= 0.5.3
    , hackage-security-HTTP  ^>= 0.1.1
    , hashable               ^>= 1.2.4
    , http-streams           ^>= 0.8
    , io-streams             ^>= 1.3
    , network-uri            ^>= 2.6.1
    , optparse-applicative   ^>= 0.14.2.0
    , tar                    ^>= 0.5
    , text                   ^>= 1.2.2
    , time                   ^>= 1.6
                          || ^>= 1.8.0.2
    , unix                   ^>= 2.7.2
    , unordered-containers   ^>= 0.2.7
    , xml                    ^>= 1.3
    , zlib                   ^>= 0.6.1

  ghc-options:         -threaded -Wall -rtsopts
